# MeetingSystem

./: .gitignore  README.md  config.py  download.py  main.py  pyproject.toml  requirements.txt  system.py  utils.py
benchmark/: gpu_usage.txt  test_evaluation_report.json
data/: output_result.txt  streaming_output.txt
evaluation/: benchmark_accuracy.py  evaluate_performance.py  test_system.py
modules/: __init__.py  asr.py  config.py  diarizer.py  stream.py  system.py
tests/: audio_tests.py  download.py  stream_tests.py  utils.py
